syntax = "proto3";

package spotify.lyrics;

option java_package = "com.spotify.lyrics.proto";
option java_multiple_files = true;

enum SyncType {
  UNSYNCED = 0;
  LINE_SYNCED = 1;
  SYLLABLE_SYNCED = 2;
}

message ColorData {
  int32 red = 1;
  int32 green = 2;
  int32 blue = 3;
  int32 alpha = 4; // usually 255
}

// DualSubs format: Syllable with startTimeMs and numChars
message Syllable {
  int64 startTimeMs = 1;
  int64 numChars = 2; // Changed from endTimeMs to numChars to match Spotify
}

message LyricsLine {
  int64 startTimeMs = 1;
  string words = 2;
  repeated Syllable syllables = 3;
}

message Alternative {
  string language = 1;
  repeated string lines = 2;
  bool rtlLang = 3;
}

message LyricsResponse {
  SyncType syncType = 1;
  repeated LyricsLine lines = 2;
  string provider = 3;
  string providerLyricsId = 4;
  string providerDisplayName = 5;
  string syncLyricsUri = 7; // Note: field 6 is syncLyricsAndroidIntent
  bool isDenseTypeface = 8;
  repeated Alternative alternatives = 9;
  string language = 10;
  bool isRtlLanguage = 11;
  int32 fullscreenAction = 12;
  bool showUpsell = 13;
}

// Colors used for lyrics display
message LyricsColors {
  int32 background = 1;
  int32 text = 2;
  int32 highlightText = 3;
}

// The actual response type Spotify expects - wraps LyricsResponse with colors
message ColorLyricsResponse {
  LyricsResponse lyrics = 1;
  LyricsColors colors = 2;
  bool hasVocalRemoval = 3;
  LyricsColors vocalRemovalColors = 4;
}

